<resources>
    <string name="app_name">Telehlam</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Telehlam</string>
    <string name="nav_header_subtitle"></string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_send">Send</string>
    <string name="new_message">New message</string>
    <string name="delete_message_history">Clean history?</string>
    <string name="message_field_hint">Just start typing</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="authorisation">Authorisation</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="entry">Log in</string>
    <string name="forget_password">Forget password</string>
    <string name="registration">Registration</string>
    <string name="repeat_password">Repeat password</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="email">Email (optionally)</string>
    <string name="phoneNumber">Phone number</string>
    <string name="next">next</string>
    <string name="nameError">Enter name</string>
    <string name="surnameError">Enter surname</string>
    <string name="emptyNumber">Write number</string>
    <string name="phoneError">Wrong phone number</string>
    <string name="loginExist">This login is already exist</string>
    <string name="loginError">Enter login</string>
    <string name="passwordError">Enter password</string>
    <string name="weakPassword">Password should have uppercase, lowercase, numbers ,special symbols and at least 7 characters in length</string>
    <string name="wrongRepeatedPassword">Passwords do not match</string>
    <string name="wrongLogin">login must contains only lowercase symbols</string>
    <string name="logout_warning">Are you sure you want to logout, if you do this, all your messages history will be deleted.</string>
    <string name="search_title">Search people</string>
    <string name="logout">Logout</string>
    <string name="fingerPrintWarning">Do you want to protect your app with your fingerprint scanner?</string>
    <string name="fingerprint_identify">Identify yourself with fingerprint</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rejectFingerPrint">I do not want to add fingerprint</string>
    <string name="hasFingerprint">You already have fingerprint</string>
    <string name="drawer_add_fingerprint">Fingerprint</string>
    <string name="delete_fingerprint">Delete fingerprint</string>
    <string name="you_en">You</string>
    <string name="settings">Settings</string>
</resources>
