<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/top_menu"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/requestFingerPrintFragment"
            android:icon="@drawable/ic_fingerprint_black_24dp"
            android:title="@string/drawer_add_fingerprint" />
    </group>
    <group android:id="@+id/bottom_menu"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit_black"
            android:title="@string/logout" />
    </group>

</menu>
