<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/side_nav_bar"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:maxWidth="250dp"
        android:text="@string/fingerPrintWarning"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/yesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:background="@drawable/login_background"
            android:text="@string/yes"
            android:textColor="@color/textOrIcons"

            ></Button>

        <Button
            android:id="@+id/noButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:background="@drawable/login_background"
            android:text="@string/no"
            android:textColor="@color/textOrIcons"

            ></Button>

    </LinearLayout>
    <Button
        android:id="@+id/deleteFingerPrint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/login_background"
        android:text="@string/delete_fingerprint"
        android:textColor="@color/textOrIcons"

        ></Button>
    B


</LinearLayout>