<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/textOrIcons"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameField"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="left"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/bottom_border"
            android:hint="@string/name"
            android:inputType="textCapWords"
            android:textColor="@color/primaryText"
            android:textColorHint="@color/secondaryText" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/surnameField"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="left"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/bottom_border"
            android:hint="@string/surname"
            android:inputType="textCapWords"
            android:textColor="@color/primaryText"
            android:textColorHint="@color/secondaryText" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginField"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="left"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/bottom_border"
            android:hint="@string/login"
            android:textColor="@color/primaryText"
            android:textColorHint="@color/secondaryText" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="left"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/bottom_border"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/primaryText"

            android:textColorHint="@color/secondaryText" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/repeatPasswordField"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="left"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/bottom_border"
            android:hint="@string/repeat_password"
            android:inputType="textPassword"
            android:textColor="@color/primaryText"
            android:textColorHint="@color/secondaryText" />


        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/login_background"
            android:padding="10dp"
            android:text="@string/login"
            android:textColor="@color/textOrIcons" />
    </LinearLayout>

</LinearLayout>