<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="300dp"
    android:layout_height="100dp"
    android:background="@drawable/bg_delete_history"
    android:orientation="vertical"
    android:id="@+id/main"
    >
    <TextView
        android:id="@+id/textView"
        android:layout_width="250dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:maxWidth="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/delete_message_history"
        android:textColor="@color/primaryText"
        android:textSize="19sp"
        android:textAlignment="center"
        android:gravity="center_horizontal"></TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/textOrIcons"
            android:id="@+id/buttonPanel"
            >
            <Button android:layout_height="40dp"
            android:id="@+id/yes_btn"
            android:layout_width="70dp"
            android:background="@color/textOrIcons"
            android:text="@string/yes"
            android:layout_marginLeft="50dp"
            android:layout_marginBottom="10dp"
            android:textSize="12sp"
            android:textAlignment="center"
            android:textColor="@color/textOrIcons"
            android:gravity="center_horizontal"></Button>
            <Button android:layout_height="40dp"
                android:id="@+id/no_btn"
                android:layout_width="70dp"
                android:background="@color/textOrIcons"
                android:text="@string/no"
                android:layout_marginLeft="50dp"
                android:layout_marginBottom="10dp"
                android:textSize="12sp"
                android:textAlignment="center"
                android:textColor="@color/textOrIcons"
                android:gravity="center_horizontal"></Button>
        </LinearLayout>
</LinearLayout>