<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/side_nav_bar"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_horizontal"
            android:text="@string/authorisation"
            android:textAlignment="center"
            android:textColor="@color/textOrIcons"
            android:textSize="24sp">

        </TextView>
    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <EditText
            android:id="@+id/loginField"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="left"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="60dp"
            android:background="@drawable/bottom_border"
            android:hint="@string/login"
            android:textColor="@color/textOrIcons"
            android:textColorHint="@color/secondaryText"></EditText>

        <TextView
            android:id="@+id/loginError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="15dp"
            android:text=""
            android:textSize="15sp"
            android:textColor="@color/textOrIcons"></TextView>
        <EditText
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="left"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="60dp"
            android:background="@drawable/bottom_border"
            android:hint="@string/password"
            android:textColor="@color/textOrIcons"

            android:textColorHint="@color/secondaryText"></EditText>
        <TextView
            android:id="@+id/passwordError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="15dp"
            android:text=""
            android:textSize="15sp"
            android:textColor="@color/textOrIcons"></TextView>

        <Button
            android:layout_width="wrap_content"
            android:id="@+id/login_authorisation"
            android:layout_height="wrap_content"
            android:background="@drawable/login_background"
            android:padding="10dp"
            android:text="@string/login"
            android:textColor="@color/textOrIcons"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"></Button>




            <Button
                android:id="@+id/registration_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/textOrIcons"
                android:padding="10dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:text="@string/registration"
                android:textColor="@color/primaryText"
                android:textSize="10sp" />

    </LinearLayout>





</LinearLayout>